--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             
         </div>
         <div class="footer">
+            <ul class="sm">
+                
+            </ul>
             <h6>@copyright RisetDoyleKun</h6>
         </div>
     </div>
